# whippet

./: CMakeLists.txt  LICENSE-whippet.txt  LICENSE.txt  README.md  git.out
inc/: generator.hpp  hanoi.hpp  pal.hpp  pal.inc.event_manager.hpp  whippet.hpp  whippet.inline.hpp
src/: pal.cpp  whippet-component.cpp  whippet-entity.cpp  whippet-porcelain.cpp  whippet-provider.cpp  whippet-system.cpp  whippet-universe.cpp  whippet-util.cpp
test/: whippet-test.cpp
